--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>SportFIT</title>
+<title>Train With Nikky</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="SportFIT template project">
@@ -27,7 +27,7 @@
 				<div class="col">
 					<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
 						<a href="#">
-							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/dot.png" alt=""><div>Sport<span>fit</span></div></div>
+							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/dot.png" alt=""><div>Nikky<span>Train</span></div></div>
 						</a>
 						<nav class="main_nav">
 							<ul class="d-flex flex-row align-items-center justify-content-start">
@@ -40,7 +40,7 @@
 						</nav>
 						<div class="phone d-flex flex-row align-items-center justify-content-start ml-auto">
 							<i class="fa fa-phone" aria-hidden="true"></i>
-							<div>652-345 3222 11</div>
+							<div>+254 783636522</div>
 						</div>
 					</div>
 				</div>
@@ -79,7 +79,7 @@
 		</div>
 		<div class="menu_phone d-flex flex-row align-items-center justify-content-start">
 			<i class="fa fa-phone" aria-hidden="true"></i>
-				<span>652-345 3222 11</span>
+				<span>+254 783636522</span>
 		</div>
 	</div>
 
@@ -450,7 +450,7 @@
 						<div class="footer_content">
 							<div class="footer_logo">
 								<a href="#">
-									<div class="logo d-flex flex-row align-items-center justify-content-center"><img src="images/dot.png" alt=""><div>Sport<span>fit</span></div></div>
+									<div class="logo d-flex flex-row align-items-center justify-content-center"><img src="images/dot.png" alt=""><div>	Nikky<span>Train</span></div></div>
 								</a>
 							</div>
 							<nav class="footer_nav">
@@ -469,7 +469,7 @@
 								</form>
 							</div>
 							<div class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://dataconsultancy.co.ke" target="_blank">Data Consultancy Limited</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						</div>
 						<div class="footer_image text-center"><img src="images/footer.png" alt=""></div>
