home page update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> Nafcom Computers Repair</title>
+<title> Train With Nikky</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.0.min.js"></script>
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  	<div class="container">
  		<div class="banner-main">
  			 <div class="logo wow bounceInLeft" data-wow-delay="0.1s">
- 			 	<h1><a href="index.html" style="color: brown">Nafcom Computers Repair</a></h1>
+ 			 	<h1><a href="index.html" style="color: brown">Train With Nikky</a></h1>
  			 </div>
 			<div class="top-nav-w3layouts">
 				<div class="menu" >
@@ -94,11 +94,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="devide-line w3-agile"> </span>
 				 <div class="about-block">
 					<div class="changer-left wow bounceInLeft" data-wow-delay="0.1s">
-						<h3>Desktops Sales and Repair</h3>
-					     <p>We offer professional computer repair and maintenance services in Nairobi. Our services range from one-off repairs to annual maintenance contracts that are tailored for micro enterprises and large organizations. We are committed to develop solutions which meet our customer needs, that are simple to understand and easy to use. Our professional technicians are experience and go through constant training that our clients receive workable and up to date services and solutions. We provide our computer repair services onsite and also remotely using special tools to make sure your machine remains as good as new and safe.</p>
+						<h3>Aerobics</h3>
+					     <p>Aerobics is a form of physical exercise that combines rhythmic aerobic exercise with stretching and strength training routines with the goal of improving all elements of fitness. Truly any exercise is going to help you lose weight. Aerobic exercise will assist in weight loss due to the amount of calories that are burned</p>
 					</div>
 					<div class="changer-right wow bounceInRight" data-wow-delay="0.1s">
-						<img src="images/one.jpg" alt="">
+						<img src="images/nikky1.png" alt="">
 					</div>
 				     <div class="clearfix"> </div>
 				     <div class="ch-bott1 agile">
@@ -107,11 +107,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 </div>
 				 <div class="about-block-snd">
 					<div class="changer-left-snd wow bounceInLeft" data-wow-delay="0.1s">
-						 <img src="images/lap.png" alt="">
+						 <img src="images/n2.png" alt="">
 					</div>
 					<div class="changer-right-snd wow bounceInRight" data-wow-delay="0.1s">
-						<h3>Laptops Sales and Repairs</h3>
-						<p> We Make Sure General hardware components Works Perfectly: Cpu fan - to help with keeping the laptop cooler heat, Sink/Heat pipe - made for the laptop so it doesn't overheat allowing air circulation in a compressed space ,CPU socket- allowing you to insert the CPU ( core processor unit) in it ,CPU- core processor unit - carries out the instruction of the programs. ( the core)hard drive- Storing data persistently,CMOS battery- battery in motherboard used for things like the bios ,Wireless card- adding wireless options to a laptop. Etc</p>
+						<h3>Zumba</h3>
+						<p>Zumba is an exercise fitness program created by Colombian dancer and choreographer Alberto "Beto" Pérez during the 1990s. Zumba is a trademark owned by Zumba Fitness, LLC. The Brazilian pop singer Claudia Leitte has become the international ambassador to Zumba Fitness.</p>
 					</div>
 				      <div class="clearfix"> </div>
 				      <div class="ch-bott1 agile">
@@ -120,16 +120,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="about-block agileits-w3layouts">
 					<div class="changer-left-trd wow bounceInLeft" data-wow-delay="0.1s">
-						<h3>Networking</h3>
-						<p>A network is defined as a group of two or more computer systems linked together. There are many types of computer networks, We deal with the following Types:<br>
-						local-area networks (LANs): The computers are geographically close together (that is, in the same building).<br>
-						wide-area networks (WANs): The computers are farther apart and are connected by telephone lines or radio waves.<br>
-						campus-area networks (CANs): The computers are within a limited geographic area, such as a campus or military base.<br>
-						metropolitan-area networks MANs): A data network designed for a town or city.<br>
-						home-area networks (HANs): A network contained within a user's home that connects a person's digital devices.</p>
+						<h3>BodyPump</h3>
+						<p>In a nutshell, BODYPUMP is a 30-, 45-, or 55-minute resistance workout that uses a barbell with very light weights and very high reps. ... During the workout, you go through five or six specific exercises, in different combinations, and end up completing approximately 800 to 1000 reps in one 55-minute session.</p>
 					</div>
 					<div class="changer-right-trd wow bounceInRight" data-wow-delay="0.1s">
-						 <img src="images/love.jpg" alt="">
+						 <img src="images/n3.png" alt="">
 					</div>
 				     <div class="clearfix"> </div>
 				     <div class="ch-bott1 w3-agile">
