home page update

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="changer-right-snd wow bounceInRight" data-wow-delay="0.1s">
 						<h3>Zumba</h3>
-						<p>Zumba is an exercise fitness program created by Colombian dancer and choreographer Alberto "Beto" Pérez during the 1990s. Zumba is a trademark owned by Zumba Fitness, LLC. The Brazilian pop singer Claudia Leitte has become the international ambassador to Zumba Fitness.</p>
+						<p>Zumba is an exercise fitness program created by Colombian dancer and choreographer Alberto "Beto" Pérez during the 1990s. Zumba is a trademark owned by Zumba Fitness, LLC. The Brazilian pop singer Claudia Leitte has become the international ambassador to Zumba Fitness.Zumba is an exercise fitness program created by Colombian dancer and choreographer Alberto "Beto" Pérez during the 1990s. Zumba is a trademark owned by Zumba Fitness, LLC. The Brazilian pop singer Claudia Leitte has become the international ambassador to Zumba Fitness.</p>
 					</div>
 				      <div class="clearfix"> </div>
 				      <div class="ch-bott1 agile">
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="about-block agileits-w3layouts">
 					<div class="changer-left-trd wow bounceInLeft" data-wow-delay="0.1s">
 						<h3>BodyPump</h3>
-						<p>In a nutshell, BODYPUMP is a 30-, 45-, or 55-minute resistance workout that uses a barbell with very light weights and very high reps. ... During the workout, you go through five or six specific exercises, in different combinations, and end up completing approximately 800 to 1000 reps in one 55-minute session.</p>
+						<p>In a nutshell, BODYPUMP is a 30-, 45-, or 55-minute resistance workout that uses a barbell with very light weights and very high reps. ... During the workout, you go through five or six specific exercises, in different combinations, and end up completing approximately 800 to 1000 reps in one 55-minute session.In a nutshell, BODYPUMP is a 30-, 45-, or 55-minute resistance workout that uses a barbell with very light weights and very high reps. ... During the workout, you go through five or six specific exercises, in different combinations, and end up completing approximately 800 to 1000 reps in one 55-minute session.</p>
 					</div>
 					<div class="changer-right-trd wow bounceInRight" data-wow-delay="0.1s">
 						 <img src="images/n3.png" alt="">
@@ -145,10 +145,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			  <div class="service-bottom agileits-w3layouts-bottom">
 				 <div class="col-md-5 ser-left wow bounceInLeft" data-wow-delay="0.1s">
-				 	<img src="images/a2.png" alt="">
+				 	<img src="images/n5.png" alt="">
 				 </div>
 				 <div class="col-md-7 ser-right wow bounceInRight" data-wow-delay="0.1s">
-				 	<p>WE AS NAFCOM COMPUTER REPAIRS OFFERS THE FOLLOWING<BR>
+				 	<p>How To Join Train With Nikky<BR>
 				 		<LI>Desk to Sales, repair and maintenance </LI><BR>
 				 		We are the best in the region deal with genuine new and spare parts desktops.<br>
 				 		<LI>Computer to Sales, repair and maintenance </LI><BR>
@@ -174,12 +174,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="gallery-bottom agileits-w3layouts">
 				<!---->
 				 <ul id="flexiselDemo3">
-						<li><img src="images/g1.jpg" class="img-responsive" alt=""/></li>
-						<li><img src="images/g6.png" class="img-responsive" alt=""/></li>
-						<li><img src="images/g2.jpg" class="img-responsive" alt=""/></li>
-						<li><img src="images/g5.jpg" class="img-responsive" alt=""/></li>
-						<li><img src="images/g3.jpg" class="img-responsive" alt=""/></li>
-						<li><img src="images/g4.jpg" class="img-responsive" alt=""/></li>
+						<li><img src="images/nikky1.png" class="img-responsive" alt=""/></li>
+						<li><img src="images/n2.png" class="img-responsive" alt=""/></li>
+						<li><img src="images/n3.png" class="img-responsive" alt=""/></li>
+						<li><img src="images/n4.png" class="img-responsive" alt=""/></li>
+						<li><img src="images/n5.png" class="img-responsive" alt=""/></li>
+					
 					 </ul>
 				</div>
 				 <script type="text/javascript">
@@ -221,20 +221,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="features-main">
 			<div class="features-top w3-agile">
-				<h2>Features</h2>
+				<h2>Our Packages</h2>
 			</div>
 			<div class="features-bottom">
 				<div class="col-md-6 features-left wthree">
 				  <div class="fea-agileits wow bounceInLeft" data-wow-delay="0.1s">
 					<div class="fea-left-top">
 						 <h3>Central processing unit</h3>
-						 <h4>Know more about cpu</h4>
+						 <h4>Everyday @ $20.0</h4>
 						 <h5>March 2020</h5>
 						 <p>A central processing unit, also called a central processor or main processor, is the electronic circuitry within a computer that executes instructions that make up a computer program. The CPU performs basic arithmetic, logic, controlling, and input/output operations specified by the instructions in the program.</p>
 					</div>
 					<div class="fea-left-bott">
 						<h4>Computer Network</h4>
-						 <h5>Feb 2020</h5>
+						 <h5>Everyday @ $20.0</h5>
 						 <p>A computer network is a digital telecommunications network for sharing resources between nodes, which are computing devices that use a common telecommunications technology. Data transmission between nodes is supported over data links consisting of physical cable media, such as twisted pair or fiber-optic cables, or by wireless methods, such as Wi-Fi, microwave transmission, or free-space optical communication. </p>
 					</div>
 				   </div>
@@ -243,13 +243,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <div class="fea-agileits-rit wow bounceInRight" data-wow-delay="0.1s">
 					<div class="fea-rit-top">
 						 <h3>Network Topology</h3>
-						 <h4>Know more about networks</h4>
+						 <h4>Everyday @ $20.0</h4>
 						 <h5>Dec 2019</h5>
 						 <p>Network topology is the arrangement of the elements of a communication network. Network topology can be used to define or describe the arrangement of various types of telecommunication networks, including command and control radio networks, industrial fieldbusses and computer networks</p>
 					</div>				
 					<div class="fea-rit-bott">
 						<h4>Local Area Network</h4>
-						 <h5>Oct 2019</h5>
+						 <h5>Everyday @ $20.0</h5>
 						 <p>A local area network is a computer network that interconnects computers within a limited area such as a residence, school, laboratory, university campus or office building. By contrast, a wide area network not only covers a larger geographic distance, but also generally involves leased telecommunication circuits. Local area  networks are mostly used in the following places; homes, School, work, churches etc. </p>
 					</div>
 				  </div>
@@ -266,8 +266,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="quotation-main agileinfo">
 			<img src="images/quota.png" alt="">
-			<p>Imagination is more important than knowledge.  For knowledge is limited, whereas imagination embraces the entire world, stimulating progress, giving birth to evolution.</p>
-			<h4>Antony -Managing Director, Nafcom</h4>
+			<p>If you want something you’ve never had, you must be willing to do something you’ve never done</p>
+			<h4>Nikky - Head Trainer</h4>
 		</div>
 	</div>
 </div>
@@ -293,12 +293,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="contact-right agileinfo wow bounceInRight" data-wow-delay="0.1s">
 					<div class="contact-rit-info wthree">
 						<h4>Address</h4>
-						<p>Off Zimmerman Base Road</p>
+						<p>Thika Road</p>
 						<p> Nairobi Kenya</p>
 						<p>P.O Box 234-00100</p>
-						<p>Nairobi.</p>
-						<p>Telephone :+254 723 532543</p>
-						<p>Email : <a href="mailto:info@example.com">nafcomtechnologies@gmail.com</a></p>
+						<p>Instagram :Nikky_fitness</p>
+						<p>Telephone :+254 783636522</p>
+						<p>Email : <a href="mailto:info@example.com">nikkygumo@gmail.com</a></p>
 					</div>
 					<div class="social-icons">
 						<h4>Follow us :</h4>
